--- a/src/CreateRepositoryDialog.ui
+++ b/src/CreateRepositoryDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>217</height>
+    <width>343</width>
+    <height>243</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -81,18 +81,28 @@
      <property name="checked">
       <bool>true</bool>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
-      <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Name</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="lineEdit_remote_name"/>
+      </item>
+      <item row="1" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>URL</string>
         </property>
        </widget>
       </item>
-      <item>
+      <item row="1" column="1">
        <widget class="RepositoryLineEdit" name="lineEdit_remote_url"/>
       </item>
-      <item>
+      <item row="1" column="2">
        <widget class="QPushButton" name="pushButton_test_repo">
         <property name="text">
          <string>Test</string>
