--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -968,7 +968,7 @@
      <x>0</x>
      <y>0</y>
      <width>848</width>
-     <height>17</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -1312,10 +1312,10 @@
   </action>
   <action name="action_edit_settings">
    <property name="text">
-    <string>&amp;Settings</string>
+    <string>&amp;Settings...</string>
    </property>
    <property name="toolTip">
-    <string>Settings...</string>
+    <string>Settings</string>
    </property>
   </action>
   <action name="action_clone">
