--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -968,7 +968,7 @@
      <x>0</x>
      <y>0</y>
      <width>848</width>
-     <height>24</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -1381,7 +1381,7 @@
   </action>
   <action name="action_push_u">
    <property name="text">
-    <string>push -u</string>
+    <string>Push --set-upstream</string>
    </property>
   </action>
   <action name="action_reset_HEAD_1">
