--- a/src/SettingBehaviorForm.ui
+++ b/src/SettingBehaviorForm.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>244</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -81,6 +81,44 @@
     </layout>
    </item>
    <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Periodically watch remote updates</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>10</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>interval in min:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="spinBox_watch_remote_min">
+       <property name="maximum">
+        <number>120</number>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="label">
@@ -125,6 +163,7 @@
   <tabstop>checkBox_auto_fetch</tabstop>
   <tabstop>checkBox_get_committer_icon</tabstop>
   <tabstop>spinBox_max_commit_item_acquisitions</tabstop>
+  <tabstop>spinBox_watch_remote_min</tabstop>
   <tabstop>pushButton_signing_policy</tabstop>
  </tabstops>
  <resources/>
